# rupee

./: .env  Cargo.toml  docker-compose.yml
migrations/2026-02-11-060711-0000_initial_setup/: up.sql
migrations/2026-02-11-063159-0000_unique_constraint_transactions/: up.sql
src/: cli.rs  file_parser.rs  main.rs  parsers.rs
src/commands/: analysis_index.rs  analysis_prepare.rs  analysis_rolling.rs  finance_parse.rs  mod.rs  parse.rs  rolling.rs
src/data_sources/: mf_api.rs  mod.rs  nse_bhav.rs  shared.rs
src/database/: embedded.rs  helpers.rs  mod.rs  models.rs  schema.rs
src/file_parsers/: mod.rs
src/parsers/: hdfc_account_statement.rs
src/statement_parsers/: hdfc_account_statement.rs  mod.rs
