[package]
name = "rupee"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.33.0"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
csv = "1.4.0"
dialoguer = "0.12.0"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["blocking", "json"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
rusty-money = { version = "0.5", features = ["iso"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.1", features = ["v7"] }
futures-io = { version = "0.2.0-beta" }
anyhow = "1.0.102"
dirs = "6.0.0"
comfy-table = "7.2.2"
