[package]
name = "rupee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
calamine = "0.33.0"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = "7.2.2"
csv = "1.4.0"
dialoguer = "0.12.0"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
dirs = "6.0.0"
dotenvy = "0.15"
futures = "0.3.32"
futures-io = { version = "0.2.0-beta" }
http-cache = "1.0.0-alpha.4"
http-cache-reqwest = "1.0.0-alpha.4"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
reqwest-middleware = "0.5.1"
rusty-money = { version = "0.5", features = ["iso"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-macros = "2.6.0"
uuid = { version = "1.3.1", features = ["v7"] }
zip = "8.1.0"
